--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,85 +30,71 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class = "row">
-        <div class = "container">
           <div class = "row rowStyle">
-            <section class = "col-md-2 time-block hour">9am</section>
-            <textarea class = "col-md-8 past">text here</textarea>
-            <button class = "col-md-2 saveBtn">S</button>
+            <section id = "nineHour" class = "col-md-2 time-block hour">9am</section>
+            <textarea id = "9" class = "col-md-9 past">text here</textarea>
+            <button id="nineBtn" class = "col-md-1 saveBtn">S</button>
           </div>
         </div>
         <div class = "container">
           <div class = "row rowStyle">
             <section class = "col-md-2 time-block hour">10am</section>
-            <textarea class = "col-md-8 past">text here</textarea>
-            <button class = "col-md-2 saveBtn">S</button>
+            <textarea id = "10" class = "col-md-9 past">text here</textarea>
+            <button class = "col-md-1 saveBtn">S</button>
           </div>
         </div>
         <div class = "container">
           <div class = "row rowStyle">
             <section class = "col-md-2 time-block hour">11am</section>
-            <textarea class = "col-md-8 present">text here</textarea>
-            <button class = "col-md-2 saveBtn">S</button>
+            <textarea id ="11" class = "col-md-9 present">text here</textarea>
+            <button class = "col-md-1 saveBtn">S</button>
           </div>
         </div>
         <div class = "container">
           <div class = "row rowStyle">
             <section class = "col-md-2 time-block hour">12pm</section>
-            <textarea class = "col-md-8 future">text here</textarea>
-            <button class = "col-md-2 saveBtn">S</button>
+            <textarea id="12" class = "col-md-9 future">text here</textarea>
+            <button class = "col-md-1 saveBtn">S</button>
           </div>
         </div>
         <div class = "container">
           <div class = "row rowStyle">
             <section class = "col-md-2 time-block hour">1pm</section>
-            <textarea class = "col-md-8 future">text here</textarea>
-            <button class = "col-md-2 saveBtn">S</button>
+            <textarea id="13" class = "col-md-9 future">text here</textarea>
+            <button class = "col-md-1 saveBtn">S</button>
           </div>
         </div>
         <div class = "container">
           <div class = "row rowStyle">
             <section class = "col-md-2 time-block hour">2pm</section>
-            <textarea class = "col-md-8 future">text here</textarea>
-            <button class = "col-md-2 saveBtn">S</button>
+            <textarea id="14" class = "col-md-9 future">text here</textarea>
+            <button class = "col-md-1 saveBtn">S</button>
           </div>
         </div>
         <div class = "container">
           <div class = "row rowStyle">
             <section class = "col-md-2 time-block hour">3pm</section>
-            <textarea class = "col-md-8 future">text here</textarea>
-            <button class = "col-md-2 saveBtn">S</button>
+            <textarea id= "15" class = "col-md-9 future">text here</textarea>
+            <button class = "col-md-1 saveBtn">S</button>
           </div>
         </div>
         <div class = "container">
           <div class = "row rowStyle">
             <section class = "col-md-2 time-block hour">4pm</section>
-            <textarea class = "col-md-8 future">text here</textarea>
-            <button class = "col-md-2 saveBtn">S</button>
+            <textarea id="16" class = "col-md-9 future">text here</textarea>
+            <button class = "col-md-1 saveBtn">S</button>
           </div>
         </div>
         <div class = "container">
           <div class = "row rowStyle">
             <section class = "col-md-2 time-block hour">5pm</section>
-            <textarea class = "col-md-8 future">text here</textarea>
-            <button class = "col-md-2 saveBtn">S</button>
+            <textarea id ="17" class = "col-md-9 future">text here</textarea>
+            <button class = "col-md-1 saveBtn">S</button>
           </div>
-        </div>
-        <!-- <div class = 'col-12'>1</div>
-        <div class = 'col-12'>2</div>
-        <div class = 'col-12'>3</div>
-        <div class = 'col-12'>4</div>
-        <div class = 'col-12'>5</div>
-        <div class = 'col-12'>6</div>
-        <div class = 'col-12'>7</div>
-        <div class = 'col-12'>8</div>
-        <div class = 'col-12'>9</div>
-        <div class = 'col-12'>7</div>
-        <div class = 'col-12'>8</div> -->
-      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src ="./app.js"></script>
   </body>
 </html>
