--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,7 +26,7 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <h3 id="currentDay" class="lead"></h3>
     </header>
       <!-- Timeblocks go here -->
     <div class="container">
